Fixed "F" key causing fullscreen toggle even when litebox not open. Also added dark gradient behind top half of litebox to make action buttons more visible.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -106,6 +106,15 @@ h1 {
     transition: opacity $transitionTime ease, transform 1.5s ease;
   }
 
+  &__gradient-bg {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.4), transparent);
+    z-index: 50;
+    width: 100%;
+    height: 50%;
+    position: fixed;
+    transition: opacity 0.4s ease;
+  }
+
   &__close-btn {
     position: fixed;
     top: 1rem;
